--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:id="@+id/timerTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Paah Timer"
+        android:text="@string/paah_timer"
         android:textSize="50sp"
         android:layout_gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -28,30 +28,30 @@
         android:layout_margin="15dp"
         android:layout_height="wrap_content"
         android:textSize="40sp"
-        android:text="Start"/>
+        android:text="@string/start"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="25sp"
-        android:layout_gravity="left"
-        android:text="Sensitivity"/>
+        android:layout_gravity="start"
+        android:layout_marginStart="15dp"
+
+        android:text="@string/sensitivity"/>
     <SeekBar
         android:id="@+id/SensitivityBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:progress="50"
         />
-    <TextView
-        android:id="@+id/volumeTextView"
-        android:layout_width="wrap_content"
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Volume"
-        android:textSize="50sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="10dp" />
 
     <ImageView
         android:id="@+id/imageView"
